added nav and social media icons

--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
                 <h2 class="font-light text-base">Web Developer, Graphic Designer</h2>
             </header>
             <!-- about me & img. img wil always be sourced from linkedin -->
-            <img src="./assets/imgs/robert-1.jpg" class="transform scale-75 rounded-full  mx-auto my-auto shadow-lg" alt="An image of Robert Schmahl"></img>
+            <img src="./assets/imgs/robert-1.jpg" class="transform scale-75 rounded-full  mx-auto my-auto shadow-lg" alt="An image of Robert Schmahl">
             <!-- navigation links -->
-            <nav>
-                <a>The Work</a>
+            <nav class="text-center mt-3">
+                <a><h3 class="font-normal text-base my-2">About Me</h3></a>
+                <a><h3 class="font-normal text-base my-2">Résumé</h3></a>
+                <a><h3 class="font-normal text-base my-2">My Work</h3></a>
             </nav>
+            <!-- social media icons -->
+            <div class="mt-10 mx-auto">
+                <img src="./assets/imgs/linkedin.png" class="mx-auto my-4" alt="LinkedIn icon">
+                <img src="./assets/imgs/github.png" class="mx-auto my-4" alt="GitHub icon">
+            </div>
         </div>
     </div>
 </body>
