--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- main site wrapper -->
     <div class="grid grid-cols-9 gap-0">
         <!-- sidebar that holds navigation & about me -->
-        <div class="col-span-3 bg-gray-300 h-screen">
+        <div class="col-span-3 bg-gray-300 h-screen shadow-md">
             <header class="text-center mt-10">
                 <h1 class="font-normal text-xl">Robert Schmahl</h1>
                 <h2 class="font-light text-base">Web Developer, Graphic Designer</h2>
@@ -25,9 +25,12 @@
                 <a><h3 class="font-normal text-base my-2">My Work</h3></a>
             </nav>
             <!-- social media icons -->
-            <div class="mt-10 mx-auto">
-                <img src="./assets/imgs/linkedin.png" class="mx-auto my-4" alt="LinkedIn icon">
-                <img src="./assets/imgs/github.png" class="mx-auto my-4" alt="GitHub icon">
+            <div class="grid grid-cols-4 gap-0 mt-10 mx-auto">
+                <div class="col-span-1"></div>
+                    <input type="image" src="./assets/imgs/github.png" class="col-span-1 mx-2 my-4" onclick="window.location='github.com/rschm007'" alt="GitHub icon">
+                    <input type="image" src="./assets/imgs/linkedin.png" class="col-span-1 mx-2 my-4" onclick="window.location='www.linkedin.com/in/robert-schmahl/'" alt="LinkedIn icon">
+                </a>
+                <div class="col-span-1"></div>
             </div>
         </div>
     </div>
