added pseudoclasses for social media icons

--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
             <!-- social media icons -->
             <div class="grid grid-cols-4 gap-0 mt-10 mx-auto">
                 <div class="col-span-1"></div>
-                    <input type="image" src="./assets/imgs/github.png" class="col-span-1 mx-2 my-4" onclick="window.location='github.com/rschm007'" alt="GitHub icon">
-                    <input type="image" src="./assets/imgs/linkedin.png" class="col-span-1 mx-2 my-4" onclick="window.location='www.linkedin.com/in/robert-schmahl/'" alt="LinkedIn icon">
+                    <form action ="https://github.com/rschm007" method="GET" class="object-none object-center col-span-1 focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 hover:-translate-y-1 hover:scale-110">
+                        <input type="image" src="./assets/imgs/github.png" class="col-span-1 mx-2 my-4 " alt="GitHub icon">
+                    </form>
+                    <form action ="https://www.linkedin.com/in/robert-schmahl/" method="GET" class="object-none object-center col-span-1 focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 hover:-translate-y-1 hover:scale-110">
+                        <input type="image" src="./assets/imgs/linkedin.png" class="col-span-1 mx-2 my-4 " alt="LinkedIn icon">
+                    </form>
                 </a>
                 <div class="col-span-1"></div>
             </div>
