--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
             <img src="./assets/imgs/robert-1.jpg" class="transform scale-75 rounded-full  mx-auto my-auto shadow-lg" alt="An image of Robert Schmahl">
             <!-- navigation links -->
             <nav class="text-center mt-3">
-                <a><h3 class="font-normal text-base my-2">About Me</h3></a>
-                <a><h3 class="font-normal text-base my-2">Résumé</h3></a>
-                <a><h3 class="font-normal text-base my-2">My Work</h3></a>
+                <a><h3 class="font-normal text-base my-2  focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 hover:scale-110 cursor-pointer">About Me</h3></a>
+                <a><h3 class="font-normal text-base my-2  focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 hover:scale-110 cursor-pointer">Résumé</h3></a>
+                <a><h3 class="font-normal text-base my-2  focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 hover:scale-110 cursor-pointer">My Work</h3></a>
             </nav>
             <!-- social media icons -->
             <div class="grid grid-cols-4 gap-0 mt-10 mx-auto">
                 <div class="col-span-1"></div>
                     <form action ="https://github.com/rschm007" method="GET" class="object-none object-center col-span-1 focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 hover:-translate-y-1 hover:scale-110">
-                        <input type="image" src="./assets/imgs/github.png" class="col-span-1 mx-2 my-4 " alt="GitHub icon">
+                        <input type="image" src="./assets/imgs/github.png" class="col-span-1 mx-2 pl-3 " alt="GitHub icon">
                     </form>
                     <form action ="https://www.linkedin.com/in/robert-schmahl/" method="GET" class="object-none object-center col-span-1 focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 hover:-translate-y-1 hover:scale-110">
-                        <input type="image" src="./assets/imgs/linkedin.png" class="col-span-1 mx-2 my-4 " alt="LinkedIn icon">
+                        <input type="image" src="./assets/imgs/linkedin.png" class="col-span-1 mx-2 pl-3 " alt="LinkedIn icon">
                     </form>
                 </a>
                 <div class="col-span-1"></div>
