added good typewriter function

--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
             <div></div>
             <header class="text-center mt-10">
                 <!-- typewriter here -->
-                <h1>
-                    <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Robert.", "I am a full-stack web developer.", "I am a graphic designer.", "I love to create."]'>
-                        <span class="wrap"></span>
-                    </a>
-                </h1>
+                <span class="font-normal text-center typewriter" style="display: block">Hi, my name is Robert</span>
+                <span class="font-normal text-center typewriter" style="display: block">I am a full-stack web developer and graphic designer.</span>
             </header>
             <div></div>
             <!-- about me & img. img wil always be sourced from linkedin -->
