typewriter function now hides & reveals text properly

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <div></div>
             <header class="text-center mt-10">
                 <!-- typewriter here -->
-                <span class="font-normal text-center typewriter" style="display: block">Hi, my name is Robert</span>
-                <span class="font-normal text-center typewriter" style="display: block">I am a full-stack web developer and graphic designer.</span>
+                <div class="font-normal text-center typewriter invisible" style="display: block">Hi, my name is Robert</div>
+                <div class="font-normal text-center typewriter invisible" style="display: block">I am a full-stack web developer and graphic designer.</div>
             </header>
             <div></div>
             <!-- about me & img. img wil always be sourced from linkedin -->
