button now has animation

--- a/index.html
+++ b/index.html
@@ -17,51 +17,11 @@
         <!-- main display at beginning. gets changed to sidebar -->
         <div class="col-span-9 grid grid-rows-3 grid-flow-col bg-gray-300 h-screen shadow-md">
             <div></div>
-            <header class="text-center mt-10">
+            <header class="text-center text-4xl mt-10 introduction">
                 <!-- typewriter here -->
-                <div class="font-normal text-center typewriter invisible" style="display: block">Hi, my name is Robert</div>
-                <div class="font-normal text-center typewriter invisible" style="display: block">I am a full-stack web developer and graphic designer.</div>
+                <div class="font-light typewriter invisible" style="display: block">Hi, my name is <div class="font-normal">Robert.</div></div>
+                <div class="font-light typewriter invisible" style="display: block">I am a full-stack web developer and graphic designer.</div>
             </header>
-            <div></div>
-            <!-- about me & img. img wil always be sourced from linkedin -->
-            <!-- <img src="./assets/imgs/robert-1.jpg" class="transform scale-75 rounded-full  mx-auto my-auto shadow-lg" alt="An image of Robert Schmahl"> -->
-            <!-- navigation links -->
-            <!-- <nav class="text-center mt-3">
-                <a><h3 id="aboutMe" class="nav font-normal text-base my-2 focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 hover:scale-110 cursor-pointer">About Me</h3></a>
-                <a><h3 id="myWork" class="nav font-normal text-base my-2 focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 hover:scale-110 cursor-pointer">My Work</h3></a>
-            </nav> -->
-            <!-- social media icons -->
-            <!-- <div class="grid grid-cols-4 gap-0 mt-10 mx-auto">
-                <div class="col-span-1"></div>
-                    <form action ="https://github.com/rschm007" method="GET" class="object-none object-center col-span-1 focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 hover:-translate-y-1 hover:scale-110">
-                        <input type="image" src="./assets/imgs/github.png" class="col-span-1 mx-2 pl-3 " alt="GitHub icon">
-                    </form>
-                    <form action ="https://www.linkedin.com/in/robert-schmahl/" method="GET" class="object-none object-center col-span-1 focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 hover:-translate-y-1 hover:scale-110">
-                        <input type="image" src="./assets/imgs/linkedin.png" class="col-span-1 mx-2 pl-3 " alt="LinkedIn icon">
-                    </form>
-                </a>
-                <div class="col-span-1"></div>
-            </div> -->
-        </div>
-        <!-- 1 of 2 portfolio columns -->
-            <!-- content 1 -->
-            <div class="col-span-3 invisible">
-                <form action ="" method="GET" class="col-span-1 focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 hover:-translate-y-1 hover:scale-110 rounded-lg h-full w-full my-0 mt-0">
-                    <input type="image" src="./assets/imgs/webdevo_gif1.gif" class="col-span-1 mx-2 pl-3 object-scale-down h-full w-full" alt="A poster for Fireflies">
-                </form>
-                <form action ="" method="GET" class="col-span-1 focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 hover:-translate-y-1 hover:scale-110 rounded-lg h-full w-full my-0 mt-0">
-                    <input type="image" src="./assets/imgs/4c-aubergine.jpg" class="col-span-1 mx-2 pl-3 object-scale-down h-full w-full" alt="A poster for Fireflies">
-                </form>
-            </div>
-            <!-- content 2 -->
-            <div class="col-span-3 invisible">
-                <form action ="" method="GET" class="col-span-1 focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 hover:-translate-y-1 hover:scale-110 rounded-lg h-full w-full my-0 mt-0">
-                    <input type="image" src="./assets/imgs/Fireflies.jpg" class="col-span-1 mx-2 pl-3 object-scale-down h-full w-full" alt="A poster for Fireflies">
-                </form>
-                <form action ="" method="GET" class="col-span-1 focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 hover:-translate-y-1 hover:scale-110 rounded-lg h-full w-full my-0 mt-0">
-                    <input type="image" src="./assets/imgs/resume.jfif" class="col-span-1 mx-2 pl-3 object-scale-down h-full w-full" alt="A poster for Fireflies">
-                </form>
-            </div>
     </div>
 </body>
 </html>
