added background color and changed button to icon

--- a/index.html
+++ b/index.html
@@ -5,21 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robert Schmahl</title>
     <!-- font awesome library -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
 <body>
     <!-- main site wrapper -->
-    <header class="grid grid-cols-9 gap-0">
         <!-- main display at beginning. gets changed to sidebar -->
-        <div class="col-span-9 grid grid-rows-3 grid-flow-col bg-gray-300 w-screen h-screen shadow-md">
+        <header class="grid grid-rows-3 grid-flow-col bg-gradient-to-b from-blue-900 to-blue-700 w-screen h-screen shadow-md">
             <div></div>
-            <div class="text-center text-4xl mt-10 introduction">
+            <div class="text-center text-white text-4xl mt-10 introduction">
                 <!-- typewriter here -->
                 <div class="font-light typewriter invisible triangle left" style="display: block">Hi, my name is <div class="font-normal">Robert.</div></div>
                 <div class="font-light typewriter invisible triangle right" style="display: block">I am a full-stack web developer and graphic designer.</div>
             </div>
-    </header>
+        </header>
 
 <!-- scripts -->
     <!-- styles CSS -->
