added some more styles to the header

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         <!-- main display at beginning. gets changed to sidebar -->
         <header class="grid grid-rows-3 grid-flow-col bg-gradient-to-b from-blue-900 to-blue-700 w-screen h-screen shadow-md">
             <div></div>
-            <div class="text-center text-white text-4xl mt-10 introduction">
+            <div class="text-center text-white text-4xl mt-10 introduction ">
+                <div class="bg-gray-400 bg-opacity-25 mx-auto h-48 px-10 py-10">
                 <!-- typewriter here -->
-                <div class="font-light typewriter invisible triangle left" style="display: block">Hi, my name is <div class="font-normal">Robert.</div></div>
-                <div class="font-light typewriter invisible triangle right" style="display: block">I am a full-stack web developer and graphic designer.</div>
+                    <div class="font-light typewriter invisible triangle left" style="display: block">Hi, my name is <div class="font-normal">Robert.</div></div>
+                    <div class="font-light typewriter invisible triangle right" style="display: block">I am a full-stack web developer and graphic designer.</div>
+                </div>
             </div>
         </header>
 
