express server now does html routes correctly. CSS styles not being imported correctly

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,138 @@
-<!DOCTYPE html><html lang="en"><head><title>Robert Schmahl</title><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"><link href="../public/assets/styles/styles.css" rel="stylesheet"><link href="../public/assets/styles/output.css" rel="stylesheet"><link href="../public/assets/styles/main.min.css" rel="stylesheet"><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script><script src="../public/assets/script.js"></script></head><body><main class="wrapper flex flex-col bg-gradient-to-br from-indigo-900 via-blue-800 to-blue-600 h-screen w-screen" id="page_style"><div class="introduction page_description flex flex-col text-center gap-10 text-white"><h1 class="typewriter flex-initial font-medium text-4xl invisible">Hi, my name is Robert.</h1><h1 class="typewriter flex-initial font-normal text-3xl invisible">I am a full-stack web developer and graphic designer.</h1></div></main></body></html>
+<!DOCTYPE html><html lang="en"><head><title>Robert Schmahl</title><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"><link type="text/css" href="../public/assets/styles/styles.css"><link type="text/css" href="../public/assets/styles/output.css"><link type="text/css" href="../public/assets/styles/main.min.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script></head><body><main class="wrapper flex flex-col bg-gradient-to-br from-indigo-900 via-blue-800 to-blue-600 h-screen w-screen" id="page_style"><div class="introduction page_description flex flex-col text-center gap-10 text-white"><h1 class="typewriter flex-initial font-medium text-4xl invisible">Hi, my name is Robert.</h1><h1 class="typewriter flex-initial font-normal text-3xl invisible">I am a full-stack web developer and graphic designer.</h1></div></main></body><script>// defining a nav constant to append after typewriter function
+const nav = `<nav class='flex flex-wrap content-start mt-20 mx-auto'>
+<a href='./index.html' class="btn_nav fadeIn homeLink text-xl mx-5 px-4 py-3 rounded-lg active" type="button">Home</a>
+<a href='./projects.html' class="btn_nav fadeIn projectsLink text-xl mx-5 px-4 py-3 rounded-lg" type="button">Projects</a>
+<a href='./skills.html' class="btn_nav fadeIn skillsLink text-xl mx-5 px-4 py-3 rounded-lg" type="button">Skills</a>
+<a href='./about.html' class="btn_nav fadeIn aboutLink text-xl mx-5 px-4 py-3 rounded-lg" type="button">About</a>
+<a href='./contact.html' class="btn_nav fadeIn contactLink text-xl mx-5 px-4 py-3 rounded-lg" type="button">Contact</a>
+</nav>
+`;
+
+$(document).ready(function () {
+// defining typewrite function
+(function ($) {
+    $.fn.typewrite = function (options) {
+    const settings = {
+        selector: this,
+        extra_char: "",
+        delay: 50,
+        trim: false,
+        callback: true,
+    };
+    if (options) $.extend(settings, options);
+
+    /* This extra closure makes it so each element
+    * matched by the selector runs sequentially, instead
+    * of all at the same time. */
+    function type_next_element(index) {
+        let current_element = $(settings.selector[index]);
+        let final_text = current_element.text();
+        if (settings.trim) final_text = $.trim(final_text);
+        // reveal letters as they are typed
+        current_element.html("").addClass("visible").removeClass("invisible");
+
+        function type_next_character(element, i) {
+        element.html(final_text.substr(0, i) + settings.extra_char);
+        if (final_text.length >= i) {
+            setTimeout(function () {
+            type_next_character(element, i + 1);
+            }, settings.delay);
+        } else {
+            if (++index < settings.selector.length) {
+            type_next_element(index);
+            } else if (settings.callback) settings.callback();
+        }
+        }
+        type_next_character(current_element, 0);
+    }
+    type_next_element(0);
+    return this;
+    };
+})(jQuery);
+
+// define pageRender function for animation
+function pageRender() {
+    // animate content
+    $("#page_style").addClass("animate_content");
+    $(".page_description").fadeOut(100).delay(2800).fadeIn();
+
+    setTimeout(function () {
+    // set page_description as invisible
+    $(".page_description").addClass("invisible");
+    }, 2800);
+
+    setTimeout(function () {
+    // end animation
+    $("#page_style").removeClass("animate_content");
+    $(".page_description").addClass("visible").removeClass("invisible");
+    }, 3200);
+
+    //remove fadeIn class after 1500ms
+    setTimeout(function () {
+    $("#page_style").removeClass("fadeIn");
+    }, 1500);
+}
+
+// calling typewriter callback
+$(".typewriter").typewrite({
+    // on callback, insert button under text
+    callback: function () {
+    $(".introduction").append(nav);
+    },
+});
+
+// add animation function
+$(document).on("click", ".btn_nav", function () {
+    // grab the value of the button
+    let btnTxt = $(this).text();
+    // properties for projects page
+    if (btnTxt == "Projects") {
+    pageRender();
+
+    setTimeout(function () {
+        $(".btn_nav").removeClass("active");
+        $(".projectsLink").addClass("active");
+    }, 3200);
+    }
+
+    // properties for skills page
+    if (btnTxt == "Skills") {
+    pageRender();
+
+    setTimeout(function () {
+        $(".btn_nav").removeClass("active");
+        $(".skillsLink").addClass("active");
+    }, 3200);
+    }
+
+    // properties for home page
+    if (btnTxt == "Home") {
+    pageRender();
+
+    setTimeout(function () {
+        $(".btn_nav").removeClass("active");
+        $(".homeLink").addClass("active");
+    }, 3200);
+    }
+
+    // properties for about page
+    if (btnTxt == "About") {
+    pageRender();
+
+    setTimeout(function () {
+        $(".btn_nav").removeClass("active");
+        $(".aboutLink").addClass("active");
+    }, 3200);
+    }
+
+    // properties for contact page
+    if (btnTxt == "Contact") {
+    pageRender();
+
+    setTimeout(function () {
+        $(".btn_nav").removeClass("active");
+        $(".contactLink").addClass("active");
+    }, 3200);
+    }
+});
+});</script></html>
