--- a/public/about.html
+++ b/public/about.html
@@ -1,1 +1,138 @@
-<!DOCTYPE html><html lang="en"><head><title>Robert Schmahl</title><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"><link href="../public/assets/styles/styles.css" rel="stylesheet"><link href="../public/assets/styles/output.css" rel="stylesheet"><link href="../public/assets/styles/main.min.css" rel="stylesheet"><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script><script src="../public/assets/script.js"></script></head><body><main class="wrapper bg-gradient-to-br from-blue-900 via-teal-400 to-teal-200 h-auto w-auto" id="page_style"><div class="overlay bg-local w-full"></div><div class="page_description flex flex-col"><nav class="flex flex-wrap content-start mt-20 mx-auto"><a class="homeLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg active" href="./index.html" type="button">Home</a><a class="projectsLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg" href="./projects.html" type="button">Projects</a><a class="skillsLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg" href="./skills.html" type="button">Skills</a><a class="aboutLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg" href="./about.html" type="button">About</a><a class="contactLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg" href="./contact.html" type="button">Contact</a></nav><header class="aboutHeader text-center flex-wrap p-5"><h2 class="text-2xl font-bold text-gray-100 pt-4 text-5xl">Who is Robert Schmahl?</h2><h3 class="text-xl font-semibold text-blue-900 pt-1 pb-4 text-xl pb-4">Or, How I Learned to Stop Worrying and Love the Process</h3></header><div class="aboutContent bg-gray-100 flex-wrap rounded-lg shadow-lg text-blue-900 p-4 mx-auto"><p class="mt-2 p-2">I am a full-stack web developer, graphic designer, professional aquarist and hobbyist woodworker. I am currently living in Irvine, CA. I earned my degree in Political Science from UC Riverside and then signed up with AmeriCorps to begin an illustrious career in politics.</p></div><div class="aboutContent flex-wrap text-center text-2xl font-extrabold text-blue-900 p-4 mx-auto"><p class="mt-2 p-2">Spoiler Alert: I am no longer working in politics</p></div><div class="aboutContent bg-gray-100 flex-wrap rounded-lg shadow-lg text-blue-900 p-4 mx-auto"><p class="mt-2 p-2">Turns out, I am much more of a creative than a politician. It wasn't all a loss, though; during my time in national service I discovered a knack for graphic design. So after completing my tour I decided I would make a go at being a professional artist. After a short misadventure working as a fishmonger I landed a steady gig as a graphic designer at a live theatre. Suddenly, I was living the dream! I was being paid to be creative, and I even got free show tickets!</p></div><div class="aboutContent flex-wrap text-center text-2xl font-extrabold text-blue-900 p-4 mx-auto"><p class="mt-2 p-2">Then, COVID-19</p></div><div class="aboutContent bg-gray-100 flex-wrap rounded-lg shadow-lg text-blue-900 p-4 mx-auto"><p class="mt-2 p-2">Like many people, I was suddenly without a job. After thinking hard about what I wanted from my career, I decided to attend the UCI Full Stack Flex Bootcamp. As a web developer I've found that my design sensibilities, love for creation, and passion-driven work ethic have given me a great excitement in this field.</p></div><div class="aboutContent flex-wrap text-center text-2xl font-extrabold text-blue-900 p-4 mx-auto"><p class="mt-2 p-2">Let's make something great together.</p></div></div></main></body></html>
+<!DOCTYPE html><html lang="en"><head><title>Robert Schmahl</title><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"><link type="text/css" href="../public/assets/styles/styles.css"><link type="text/css" href="../public/assets/styles/output.css"><link type="text/css" href="../public/assets/styles/main.min.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script></head><body><main class="wrapper bg-gradient-to-br from-blue-900 via-teal-400 to-teal-200 h-auto w-auto" id="page_style"><div class="overlay bg-local w-full"></div><div class="page_description flex flex-col"><nav class="flex flex-wrap content-start mt-20 mx-auto"><a class="homeLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg active" href="./index.html" type="button">Home</a><a class="projectsLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg" href="./projects.html" type="button">Projects</a><a class="skillsLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg" href="./skills.html" type="button">Skills</a><a class="aboutLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg" href="./about.html" type="button">About</a><a class="contactLink btn_nav text-white fadeIn text-xl mx-5 px-4 py-3 rounded-lg" href="./contact.html" type="button">Contact</a></nav><header class="aboutHeader text-center flex-wrap p-5"><h2 class="text-2xl font-bold text-gray-100 pt-4 text-5xl">Who is Robert Schmahl?</h2><h3 class="text-xl font-semibold text-blue-900 pt-1 pb-4 text-xl pb-4">Or, How I Learned to Stop Worrying and Love the Process</h3></header><div class="aboutContent bg-gray-100 flex-wrap rounded-lg shadow-lg text-blue-900 p-4 mx-auto"><p class="mt-2 p-2">I am a full-stack web developer, graphic designer, professional aquarist and hobbyist woodworker. I am currently living in Irvine, CA. I earned my degree in Political Science from UC Riverside and then signed up with AmeriCorps to begin an illustrious career in politics.</p></div><div class="aboutContent flex-wrap text-center text-2xl font-extrabold text-blue-900 p-4 mx-auto"><p class="mt-2 p-2">Spoiler Alert: I am no longer working in politics</p></div><div class="aboutContent bg-gray-100 flex-wrap rounded-lg shadow-lg text-blue-900 p-4 mx-auto"><p class="mt-2 p-2">Turns out, I am much more of a creative than a politician. It wasn't all a loss, though; during my time in national service I discovered a knack for graphic design. So after completing my tour I decided I would make a go at being a professional artist. After a short misadventure working as a fishmonger I landed a steady gig as a graphic designer at a live theatre. Suddenly, I was living the dream! I was being paid to be creative, and I even got free show tickets!</p></div><div class="aboutContent flex-wrap text-center text-2xl font-extrabold text-blue-900 p-4 mx-auto"><p class="mt-2 p-2">Then, COVID-19</p></div><div class="aboutContent bg-gray-100 flex-wrap rounded-lg shadow-lg text-blue-900 p-4 mx-auto"><p class="mt-2 p-2">Like many people, I was suddenly without a job. After thinking hard about what I wanted from my career, I decided to attend the UCI Full Stack Flex Bootcamp. As a web developer I've found that my design sensibilities, love for creation, and passion-driven work ethic have given me a great excitement in this field.</p></div><div class="aboutContent flex-wrap text-center text-2xl font-extrabold text-blue-900 p-4 mx-auto"><p class="mt-2 p-2">Let's make something great together.</p></div></div></main></body><script>// defining a nav constant to append after typewriter function
+const nav = `<nav class='flex flex-wrap content-start mt-20 mx-auto'>
+<a href='./index.html' class="btn_nav fadeIn homeLink text-xl mx-5 px-4 py-3 rounded-lg active" type="button">Home</a>
+<a href='./projects.html' class="btn_nav fadeIn projectsLink text-xl mx-5 px-4 py-3 rounded-lg" type="button">Projects</a>
+<a href='./skills.html' class="btn_nav fadeIn skillsLink text-xl mx-5 px-4 py-3 rounded-lg" type="button">Skills</a>
+<a href='./about.html' class="btn_nav fadeIn aboutLink text-xl mx-5 px-4 py-3 rounded-lg" type="button">About</a>
+<a href='./contact.html' class="btn_nav fadeIn contactLink text-xl mx-5 px-4 py-3 rounded-lg" type="button">Contact</a>
+</nav>
+`;
+
+$(document).ready(function () {
+// defining typewrite function
+(function ($) {
+    $.fn.typewrite = function (options) {
+    const settings = {
+        selector: this,
+        extra_char: "",
+        delay: 50,
+        trim: false,
+        callback: true,
+    };
+    if (options) $.extend(settings, options);
+
+    /* This extra closure makes it so each element
+    * matched by the selector runs sequentially, instead
+    * of all at the same time. */
+    function type_next_element(index) {
+        let current_element = $(settings.selector[index]);
+        let final_text = current_element.text();
+        if (settings.trim) final_text = $.trim(final_text);
+        // reveal letters as they are typed
+        current_element.html("").addClass("visible").removeClass("invisible");
+
+        function type_next_character(element, i) {
+        element.html(final_text.substr(0, i) + settings.extra_char);
+        if (final_text.length >= i) {
+            setTimeout(function () {
+            type_next_character(element, i + 1);
+            }, settings.delay);
+        } else {
+            if (++index < settings.selector.length) {
+            type_next_element(index);
+            } else if (settings.callback) settings.callback();
+        }
+        }
+        type_next_character(current_element, 0);
+    }
+    type_next_element(0);
+    return this;
+    };
+})(jQuery);
+
+// define pageRender function for animation
+function pageRender() {
+    // animate content
+    $("#page_style").addClass("animate_content");
+    $(".page_description").fadeOut(100).delay(2800).fadeIn();
+
+    setTimeout(function () {
+    // set page_description as invisible
+    $(".page_description").addClass("invisible");
+    }, 2800);
+
+    setTimeout(function () {
+    // end animation
+    $("#page_style").removeClass("animate_content");
+    $(".page_description").addClass("visible").removeClass("invisible");
+    }, 3200);
+
+    //remove fadeIn class after 1500ms
+    setTimeout(function () {
+    $("#page_style").removeClass("fadeIn");
+    }, 1500);
+}
+
+// calling typewriter callback
+$(".typewriter").typewrite({
+    // on callback, insert button under text
+    callback: function () {
+    $(".introduction").append(nav);
+    },
+});
+
+// add animation function
+$(document).on("click", ".btn_nav", function () {
+    // grab the value of the button
+    let btnTxt = $(this).text();
+    // properties for projects page
+    if (btnTxt == "Projects") {
+    pageRender();
+
+    setTimeout(function () {
+        $(".btn_nav").removeClass("active");
+        $(".projectsLink").addClass("active");
+    }, 3200);
+    }
+
+    // properties for skills page
+    if (btnTxt == "Skills") {
+    pageRender();
+
+    setTimeout(function () {
+        $(".btn_nav").removeClass("active");
+        $(".skillsLink").addClass("active");
+    }, 3200);
+    }
+
+    // properties for home page
+    if (btnTxt == "Home") {
+    pageRender();
+
+    setTimeout(function () {
+        $(".btn_nav").removeClass("active");
+        $(".homeLink").addClass("active");
+    }, 3200);
+    }
+
+    // properties for about page
+    if (btnTxt == "About") {
+    pageRender();
+
+    setTimeout(function () {
+        $(".btn_nav").removeClass("active");
+        $(".aboutLink").addClass("active");
+    }, 3200);
+    }
+
+    // properties for contact page
+    if (btnTxt == "Contact") {
+    pageRender();
+
+    setTimeout(function () {
+        $(".btn_nav").removeClass("active");
+        $(".contactLink").addClass("active");
+    }, 3200);
+    }
+});
+});</script></html>
